complete responsive slack page.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC:100,300,400,500,700,900&display=swap"
+        rel="stylesheet">
     <title>chat-tk-2019-slack</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,29 +20,39 @@
         <div id="name">
 
             <div>
-                <h2>tk-2019<i class="fab fa-chevron-down"></i></h2>
+
+                <h3>tk-2019<i class="fas fa-chevron-down"></i></h3>
                 <p><i class="fas fa-circle"></i>Farheen Shadani</p>
+
             </div>
 
             <i class="far fa-bell"></i>
 
         </div>
 
-        <div>
+        <div id="searching-btn">
+
             <button><i class="fas fa-search"></i>Jump to....</button>
+
         </div>
 
-        <h3><i class="far fa-comment"></i>Threads</h3>
+        <div id="threads">
+
+            <h4><i class="far fa-comment"></i>Threads</h4>
+
+        </div>
 
         <div id="channel-list">
 
             <div id="channel">
 
-                <h3>Channels</h3>
+                <h4>Channels</h4>
                 <i class="fas fa-plus-circle"></i>
 
             </div>
+
             <ul>
+
                 <li><i class="fas fa-hashtag"></i>announcement</li>
                 <li><i class="fas fa-hashtag"></i>attendance</li>
                 <li><i class="fas fa-hashtag"></i>chat</li>
@@ -53,6 +65,7 @@
                 <li><i class="fas fa-hashtag"></i>student-showcase</li>
                 <li><i class="fas fa-lock"></i>tk-girls</li>
                 <li><i class="fas fa-hashtag"></i>web-dev</li>
+
             </ul>
 
         </div>
@@ -61,14 +74,17 @@
 
             <div id="message">
 
-                <h3>Direct Messages</h3>
+                <h4>Direct Messages</h4>
                 <i class="fas fa-plus-circle"></i>
 
             </div>
+
             <ul>
+
                 <li><i class="fas fa-heart"></i>Slackbot</li>
                 <li><i class="fas fa-circle"></i>Farheen Shadani(You)</li>
                 <li><i class="far fa-circle"></i>Arsalameherali</li>
+
             </ul>
 
         </div>
@@ -80,40 +96,188 @@
         <header>
 
             <div id="chat">
-                <h3># chat</h3>
+
+                <h2><i class="fas fa-hashtag"></i>chat</h2>
+
                 <div id="chat-icons">
+
                     <i class="far fa-star"></i>
-                    <i class="far fa-user">-</i>
-                    <i class="fas fa-thumbtack">0</i>
-                    <i class="fas fa-pencil-alt">Add a Topic</i>
+                    <i class="far fa-user"> 117</i>
+                    <i class="fas fa-thumbtack"> 0</i>
+                    <i class="fas fa-pencil-alt"> Add a Topic</i>
+
                 </div>
 
             </div>
 
             <div id="search">
+
                 <i class="fas fa-phone"></i>
                 <i class="fas fa-exclamation-circle"></i>
                 <i class="fas fa-cog"></i>
                 <button><i class="fas fa-search"></i>Search</button>
-                <p>@</p>
+                <i class="fas fa-at"></i>
                 <i class="far fa-star"></i>
                 <i class="fas fa-bars"></i>
+
             </div>
 
         </header>
 
-<fieldset>
-    <legend>Wednesday, May 15th</legend>
-</fieldset>
+        <main>
 
-<fieldset>
-    <legend>Thursday, May 16th</legend>
-</fieldset>
+            <fieldset>
 
+                <legend>Wednesday, May 15th</legend>
+
+            </fieldset>
+
+            <fieldset>
+
+                <legend>Thursday, May 16th</legend>
+
+            </fieldset>
+
+
+            <div id="conversation">
+
+                <img src="images/1.PNG">
+
+                <div id="details">
+
+                    <div id="info">
+
+                        <h3>Sarah Ahmed</h3>
+                        <p>10:27 AM</p>
+
+                    </div>
+
+                    <p><a href="#">@ Noreen naz</a> can you add more students to this channel. I think half the students
+                        are not here.</p>
+
+                </div>
+
+            </div>
+
+            <div id="conversation">
+
+                <img src="images/2.PNG">
+
+                <div id="details">
+
+                    <div id="info">
+
+                        <h3>Noreen naz </h3>
+                        <p>1:08 PM</p>
+
+                    </div>
+
+                    <p>Yes sure</p>
+
+                </div>
+
+            </div>
+
+            <div id="conversation">
+
+                <img src="images/3.PNG">
+
+                <div id="details">
+
+                    <div id="info">
+
+                        <h3>Areeba khan</h3>
+                        <p>2:01 PM</p>
+
+                    </div>
+
+                    <p>was added to #chat by Noreen naz, along with 72 others.</p>
+
+                </div>
+
+            </div>
+
+            <div id="conversation">
+
+                <img src="images/4.PNG">
+
+                <div id="details">
+
+                    <div id="info">
+
+                        <h3>syeda kukab</h3>
+                        <i class="far fa-comment"></i>
+                        <p>9:39 PM</p>
+
+                    </div>
+
+                    <p>by flex box ,make section,font awsome,use marque tag or css transition ,for highlighting use mark
+                        tag, apply flex box on parent</p>
+
+                    <button><i class="fas fa-heart"></i> 1</button>
+
+                    <div id="replies">
+
+                        <img src="images/5.PNG">
+                        <img src="images/4.PNG">
+                        <p><a href="#">8 Replies</a>Last reply 1 month ago</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div id="conversation">
+
+                <img src="images/4.PNG">
+
+                <div id="details">
+
+                    <div id="info">
+
+                        <h3>syeda kukab </h3>
+                        <i class="far fa-comment">...</i>
+                        <p>9:44 PM</p>
+
+                    </div>
+
+                    <p><a href="#">https://www.w3schools.com/css/css3_flexbox.asp</a></p>
+
+                    <div id="reference">
+
+                        <img src="images/w3-logo.PNG">
+                        <p>w3schools.com</p>
+
+                    </div>
+
+                    <h5>CSS Flexbox (Flexible Box)</h5>
+
+                    <p>Well organized and easy to understand Web building tutorials with lots of examples of how to use
+                        HTML, CSS, JavaScript, SQL, PHP, Python, Bootstrap, Java and XML.</p>
+                </div>
+
+            </div>
+
+            <fieldset>
+
+                <legend>Friday, May 17th</legend>
+
+            </fieldset>
+
+        </main>
+
+        <footer>
+
+            <div id="footer-btn">
+
+                <button><i class="fas fa-plus"></i> Message # chat <i class="fas fa-at"></i> <i
+                        class="far fa-smile"></i></button>
+
+            </div>
+        </footer>
 
     </section>
-
-
 
 </body>
 
